--- a/dashboards/sample.erb
+++ b/dashboards/sample.erb
@@ -21,8 +21,11 @@
     <li data-row="2" data-col="1" data-sizex="2" data-sizey="1">
 	  <div data-id="barchartSum" data-view ="BarChart" data-title="" data-moreinfo="" style="background-color:#008080" ></div>
 	</li>
+	<li data-row="2" data-col="1" data-sizex="2" data-sizey="1">
+	  <div data-id="barchartSebes" data-view ="BarChart" data-title="" data-moreinfo="" style="background-color:#039BE5" ></div>
+	</li>
 	
-    
+
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="buzzwordsKas" data-view="List" data-unordered="true" data-title="Выручка по кассам" data-moreinfo="" style="background-color:#9966CC"></div>
     </li>
@@ -67,7 +70,13 @@
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="dataSebesM" data-view="Number" data-title="Себест месяц" data-moreinfo="" ></div>
     </li>
-    
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="max" data-view="Max" data-title="Выручка" data-height="200" data-width="200" data-min="0" data-max="100" data-suffix="" ></div>
+    </li>
+
+	<li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+		<div data-id="progress_bars" data-view="ProgressBars" data-title="Project Bars" style="background-color:#4682B4"></div>
+	</li>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="buzzwordsTypeM" data-view="List" data-unordered="true" data-title="Топ по типам скидки месяц" data-moreinfo="" style="background-color:#669999"></div>
     </li>
@@ -86,14 +95,14 @@
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
       <div data-id="TopGruppM" data-view="List" data-unordered="true" data-title="Топ по группам блюд за месяц" data-moreinfo="" style="background-color:#009966"></div>
     </li>
-	
+	<li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
+      <div data-id="TopGruppMPrecent" data-view="List" data-unordered="true" data-title="Топ по группам блюд за месяц (%)" data-moreinfo="" style="background-color:#009966"></div>
+    </li>	
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
       <div data-id="TopGruppMCount" data-view="List" data-unordered="true" data-title="Топ по группам блюд за месяц (Кол.)" data-moreinfo="" style="background-color:#009966"></div>
     </li>
 	
-	<li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
-      <div data-id="TopGruppMPrecent" data-view="List" data-unordered="true" data-title="Топ по группам блюд за месяц (%)" data-moreinfo="" style="background-color:#009966"></div>
-    </li>
+
 	
 	
 	<li data-row="1" data-col="1" data-sizex="1" data-sizey="2">
@@ -102,11 +111,16 @@
     
     
 	 
-   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
-      <div data-id="max" data-view="Max" data-title="Выручка" data-height="200" data-width="200" data-min="0" data-max="100" data-suffix="" ></div>
-    </li>
+   
+    
 	
-   <!-- <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+   
+   <!-- 
+       
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+      <div data-id="telegram" data-view="Telegram" data-unordered="true" data-title="Telegram" data-moreinfo="" style="background-color:#9966CC"></div>
+    </li>
+   <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div data-id="synergy" data-view="Meter" data-title="Synergy" data-height="200" data-width="200" data-min="0" data-max="100" data-suffix=""></div>
     </li>
 	
